# intermediary

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.html  package.json  package.json.tmp  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: windows_ci.yml  windows_release.yml
agent/: tsconfig.json
agent/src/: agent_runtime.ts  main.ts
app/: index.html  splashscreen.html
app/src/: app.tsx  main.tsx  vite_env.d.ts
crates/im_agent/: Cargo.toml
crates/im_agent/src/: lib.rs  main.rs
crates/im_agent/src/bundles/: bundle_builder.rs  bundle_builder_blocking.rs  bundle_builder_tests.rs  bundle_lister.rs  bundle_progress.rs  git_info.rs  ignore_rules.rs  mod.rs
crates/im_agent/src/error/: agent_error.rs  mod.rs
crates/im_agent/src/logging/: json_logger.rs  mod.rs
crates/im_agent/src/protocol/: commands.rs  envelopes.rs  events.rs  mod.rs  responses.rs  responses_tr_fleet.rs  tests.rs  tr_fleet_tests.rs
crates/im_agent/src/repos/: categorizer.rs  generated_code_extensions.rs  ignore_matcher.rs  mod.rs  mru_index.rs  recent_files_store.rs  repo_top_level.rs  repo_watcher.rs  repo_watcher_events.rs  watcher_error.rs
crates/im_agent/src/runtime/: config.rs  config_fingerprint.rs  mod.rs  state.rs  state_watchers.rs
crates/im_agent/src/server/: connection.rs  event_bus.rs  handshake_auth.rs  mod.rs  ws_server.rs
crates/im_agent/src/server/connection/: dispatch.rs
crates/im_agent/src/staging/: layout.rs  mod.rs  path_bridge.rs  stager.rs
crates/im_bundle/: Cargo.toml
crates/im_bundle/src/: compression_policy.rs  error.rs  global_excludes.rs  ignore_rules.rs  lib.rs  manifest.rs  plan.rs  progress.rs  progress_sink.rs  scanner.rs  writer.rs  writer_tests.rs
crates/im_bundle/tests/: scanner_test.rs  size_capped_reads_test.rs
crates/im_host_agent/: Cargo.toml
crates/im_host_agent/src/: config.rs  error_codes.rs  lib.rs  main.rs
crates/im_host_agent/src/runtime/: host_runtime.rs  host_runtime_helpers.rs  local_host_backend.rs  local_windows_backend.rs  mod.rs  repo_backend.rs  router.rs  tr_fleet_service.rs  wsl_client_hello_cache.rs
crates/im_host_agent/src/runtime/host_runtime/: mod.rs  wsl_routing.rs  wsl_transport_epoch_state.rs
crates/im_host_agent/src/server/: connection.rs  dispatch.rs  handshake_auth.rs  mod.rs  ws_server.rs
crates/im_host_agent/src/wsl/: mod.rs  wsl_backend_client.rs  wsl_backend_messages.rs
crates/im_host_agent/src/wsl/wsl_backend_client/: tests.rs
crates/im_zip/: Cargo.toml
crates/im_zip/src/: error.rs  lib.rs  plan.rs  progress.rs  writer.rs
docs/: guide.md  known_issues.md  prd.md  roadmap.md  system_overview.md
docs/commands/: agent.md  agent_bundle.md  bundle_cli.md  checks_local.md  dev_windows.md  dev_wsl_agent.md  fix_inotify_limits.md  release_windows.md  setup_wsl_node.md  zip_bundles.md
docs/compliance/: adr_000_modular_file_discipline.md  adr_005_typescript_native_contracts_and_rails.md  adr_006_dev_environment_agent_workflow_discipline.md  adr_007_architecture_first_execution.md  adr_008_rust_runtime_contracts_and_error_handling.md  adr_009_rust_concurrency_and_io_boundary_rules.md  adr_010_tauri_security_baseline.md  adr_011_managed_ml_runtime_packs_and_binary_only_deps.md  adr_012_copy_safe_command_delivery.md  adr_013_unified_run_log_and_debug_console.md
docs/design/: intermediary_ui_overhaul_design.md  persistent_recent_files_design.md  starred_files_design.md
docs/environment/: chatgpt_custom_instructions.md  codex_operational_guide.md  codex_prompting_guide.md  docs_workflow.md
docs/inventory/: file_ledger.json  file_ledger.md  skills_inventory.md
docs/reports/: compact_mode_report.md  macos_parity_report.md
docs/usage/: agent_wsl_bruised_states.md  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/agent_bundle/: agent_main.cjs  im_bundle_cli
src-tauri/src/lib/: mod.rs
src-tauri/src/lib/agent/: host_process_control.rs  install.rs  install_host_binary.rs  install_runtime.rs  mod.rs  process_control.rs  supervisor.rs  supervisor_helpers.rs  types.rs  wsl_process_control.rs  wsl_process_control_commands.rs
src-tauri/src/lib/agent/supervisor/: host.rs  lifecycle.rs  managed_processes.rs  probes.rs  process_kill.rs  processes.rs  runtime.rs  state.rs  websocket_probe.rs  wsl.rs  wsl_control.rs  wsl_mode.rs  wsl_runtime.rs
src-tauri/src/lib/commands/: agent_control.rs  agent_probe.rs  config.rs  file_manager.rs  file_opener.rs  mod.rs  notes.rs  paths.rs  reset.rs  startup.rs  wsl.rs  wsl_distro.rs
src-tauri/src/lib/config/: generated_code_globs.rs  io.rs  mod.rs  path.rs  types.rs
src-tauri/src/lib/config/io/: tests.rs
src-tauri/src/lib/config/types/: tests.rs  validation.rs
src-tauri/src/lib/obs/: logging.rs  mod.rs
src-tauri/src/lib/paths/: app_paths.rs  mod.rs  repo_root_resolver.rs  wsl_convert.rs
(+192 files in other folders)
