# Path: Cargo.toml
# Description: Cargo workspace root - orchestrates Rust crates

[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/im_bundle",
    "crates/im_agent",
    "crates/im_host_agent",
]

[workspace.package]
edition = "2021"
authors = ["JL"]

[profile.dev.package.im_bundle]
opt-level = 3
debug = 1
codegen-units = 1
