[package]
name = "intermediary"
version = "0.1.1"
description = "Intermediary - Context bundling app for AI agents"
authors = ["JL"]
edition = "2021"

[lib]
name = "intermediary_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib/mod.rs"

[[bin]]
name = "intermediary"
path = "src/bin/intermediary.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-drag = "2.1"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
chrono = "0.4"
once_cell = "1.19"
regex = "1.10"
im_bundle = { path = "../crates/im_bundle" }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
