# Path: crates/im_agent/Cargo.toml
# Description: Rust WSL agent daemon crate for Intermediary

[package]
name = "im_agent"
version = "0.1.0"
edition = "2021"

description = "WSL agent daemon for Intermediary"

[lib]
path = "src/lib.rs"

[[bin]]
name = "im_agent"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = "0.23"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
