# Path: crates/im_zip/Cargo.toml
# Description: Zip archive creation library for context bundles

[package]
name = "im_zip"
version = "0.1.0"
edition = "2021"
authors = ["JL"]
description = "Zip archive creation for Intermediary context bundles"

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
