# Path: crates/im_zip/Cargo.toml
# Description: Zip archive creation library for context bundles

[package]
name = "im_zip"
version = "0.1.0"
edition = "2021"
authors = ["JL"]
description = "Zip archive creation for Intermediary context bundles"

[lib]
path = "src/lib.rs"

[[bin]]
name = "im_zip_cli"
path = "src/bin/im_zip_cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
